--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -73,8 +73,8 @@
           sizeXl="2"
           class="col-home"
           *ngFor="let item of arrayLoad">
-            <ion-card class="card-list">
-              <ion-skeleton-text animated></ion-skeleton-text>
+            <ion-card class="card-list card-skeleton">
+              <ion-skeleton-text animated class="margin-0"></ion-skeleton-text>
             </ion-card>
           </ion-col>
         </ion-row>
