--- a/vlibs/virtwoo-auth/pages/virtwoo-auth-login/virtwoo-auth-login.component.html
+++ b/vlibs/virtwoo-auth/pages/virtwoo-auth-login/virtwoo-auth-login.component.html
@@ -25,8 +25,11 @@
           <div class="forgot-password">
             <span
               (click)="goToForgot()"
+              class="register"
             >
+            <b>
             {{ 'VIRTWOO_AUTH.MESSAGE.FORGOT_PASSWORD.TITLE' | translate }}
+            </b>
             </span>
           </div>
         </virtwoo-auth-form>
