--- a/vlibs/virtwoo-auth/pages/virtwoo-forgot-password/virtwoo-forgot-password.component.html
+++ b/vlibs/virtwoo-auth/pages/virtwoo-forgot-password/virtwoo-forgot-password.component.html
@@ -1,8 +1,12 @@
-<sl-base-page class="auth"
-  backButton="top"
-  nav="top"
->
-
+<sl-base-page class="auth">
+<div class="ion-activatable ion-activatable-up ripple-toolbar" slot="start">
+  <fa-icon
+  [icon]="['fas', 'arrow-left']"
+  class="icono-arrow"
+  (click)="Back()"
+></fa-icon>
+  <ion-ripple-effect></ion-ripple-effect>
+</div>
   <div class="auth__content">
     <div class="auth__content__wrapper">
 
