--- a/src/app/pages/basic-data/basic-data.page.scss
+++ b/src/app/pages/basic-data/basic-data.page.scss
@@ -8,13 +8,13 @@
 }
 
 .phone {
-  width: 100%; 
+  width: 100%;
   display: flex;
 }
 
 .phoneCode {
-  flex: 0 0 35%; 
-  margin-right: 5%;
+  flex: 0 0 35%;
+  margin-right: 1rem;
 }
 
 .phoneNumber {
