--- a/src/app/pages/profile-settings/item-perfil/item-perfil.component.scss
+++ b/src/app/pages/profile-settings/item-perfil/item-perfil.component.scss
@@ -1,27 +1,27 @@
 
 .item-selector {
-  height: 49px;
+  height: 3rem;
 }
 .item-perfil {
-  padding: 0px; 
-  display: flex; 
-  align-items: flex-start; 
+  padding: 0px;
+  display: flex;
+  align-items: flex-start;
   margin-bottom: 1%;
 }
 
 .contenedor-doble {
-  display: flex; 
-  flex-direction: column; 
+  display: flex;
+  flex-direction: column;
   width:  100%;
 }
 
 .select-type {
-  min-width: 100% !important; 
-  padding-left: 16px; 
-  min-height: 56px; 
+  min-width: 100% !important;
+  padding-left: 1rem;
+  min-height: 4rem;
 }
 
 .icon-del {
-  margin-inline-start: 1px !important;
+  margin-inline-start: 0.1rem !important;
   align-self:center
 }
