--- a/src/app/shared/components/item-list/item-list.component.scss
+++ b/src/app/shared/components/item-list/item-list.component.scss
@@ -1,9 +1,9 @@
 
 
 .text-margin {
-  margin-left: 2%; 
-  margin-top: 8px;
+  margin-left: 0.25rem;
+  margin-top: 0.5rem;
 }
 .font-size-12 {
-  font-size: 12px;
+  font-size: 0.75rem;
 }
