--- a/src/global.scss
+++ b/src/global.scss
@@ -30,12 +30,12 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald:400,700');
 
 .icono {
-  margin-inline-end: 0px !important; 
-  align-self:flex-start; 
-  min-width: 32px;
-  margin-top: 10px;
+  margin-inline-end: 0px !important;
+  align-self:flex-start;
+  min-width: 2rem;
+  margin-top: 0.8rem;
   color: rgba(var(--ion-text-color-rgb,0,0,0),0.54);
-  font-size: 1.6em;
+  font-size: 1.6rem;
     --highlight-color-focused: #3880ff;
     --highlight-color-valid: #10dc60;
     --highlight-color-invalid: #f04141;
@@ -54,14 +54,14 @@
 }
 
 .icono-white {
-  margin-inline-end: 0px !important; 
+  margin-inline-end: 0px !important;
   color: #fff;
-  font-size: 1.6em;
+  font-size: 1.6rem;
 }
 
 .icono-arrow {
   color: var(--ion-color-medium, #989aa2) !important;
-  font-size: 1.6em;
+  font-size: 1.6rem;
 }
 
 .color-medium {
@@ -69,21 +69,21 @@
 }
 
 .icono-public {
-  font-size: 24px;
+  font-size: 1.5rem;
 }
 
 .padding-left-10 {
-  padding-left: 10px;
+  padding-left: 0.6rem;
 }
 
 .chip-item {
-  margin-top: 5px; 
-  flex-wrap: nowrap; 
+  margin-top: 0.3rem;
+  flex-wrap: nowrap;
   width: 100%;
 }
 
 .input-item {
-  margin-left: 2%; 
+  margin-left: 2%;
   width: 100%;
 }
 
@@ -98,7 +98,7 @@
   justify-content: center;
   display: flex;
   padding-top: 2%;
-  
+
 }
 
 .contenedor-card{
@@ -110,27 +110,27 @@
 .text-card {
   color: rgb(236, 235, 235);
   font-weight: bold;
-  text-shadow: 1px 1px 3px #000;
+  text-shadow: 0.1rem 0.1rem 0.15rem #000;
   margin: 0%;
 }
 
 .sombra {
-  text-shadow: 1px 1px 3px #000;
+  text-shadow: 0.1rem 0.1rem 0.15rem #000;
 }
 
 .status-card{
   position: absolute;
   top: 0px;
-  display: flex; 
-  justify-content: flex-end; 
-  width: 100%; 
-  padding-top: 2%; 
-  padding-right: 3%;
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  padding-top: 0.2rem;
+  padding-right: 0.2rem;
 }
 
 .end {
-  display: flex; 
-  justify-content: flex-end; 
+  display: flex;
+  justify-content: flex-end;
 }
 .name-card{
   position: absolute;
@@ -175,13 +175,13 @@
 }
 
 .title-name {
-  font-size: x-large; 
+  font-size: x-large;
   text-align: center;
 }
 
 .avatar-profile {
-  height: 100px;
-  width: 100px;
+  height: 6.25rem;
+  width: 6.25rem;
 }
 
 .icon-bar {
@@ -194,9 +194,9 @@
 }
 
 .button-float-skeleton {
-  width: 40px;
-  height: 40px;
-  margin: 8px;
+  width: 2.25rem;
+  height: 2.25rem;
+  margin: 0.25rem;
 }
 
 .img-avatar {
@@ -205,22 +205,22 @@
 }
 
 .chip-margin {
-  margin-bottom: 5px;
+  margin-bottom: 0.3rem;
 }
 
 .vacio {
   align-self: center;
   justify-self: center;
   text-align: center;
-  padding-top: 10px;
+  padding-top: 0.6rem;
   > fa-icon {
-      font-size: 59px;
+      font-size: 3rem;
       width: 100%;
       margin-bottom: 35px;
       color: #c7c7c7;
   }
   > p {
-      font-size: 20px;
+      font-size: 1.25rem;
       color: #c7c7c7;
   }
 
@@ -233,44 +233,44 @@
 
 .ripple-toolbar {
   border-radius: 50%;
-  height: 40px;
-  width: 40px;
+  height: 2.25rem;
+  width: 2.25rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .ripple-toolbar-mis{
-  margin-inline-start: 3%;
+  margin-inline-start: 0.2rem;
 }
 .ripple-toolbar-mie {
-  margin-inline-end: 3%;
+  margin-inline-end: 0.2rem;
 }
 
 .icon-item-list {
-  width: 35px;
+  width: 2rem;
   text-align: center;
 }
 
 .newWink {
-  border: 2px #3880ff solid;
+  border: 0.1rem #3880ff solid;
 }
 
 .card-list {
-  margin: 0px; 
-  max-width: 170px;
-  border-radius: 9%;
-  height: 220px;
+  margin: 0px;
+  border-radius: 1rem;
+  width: 100%;
+  height: 100%;
 }
 
 .skeleton-name {
   width: 30%;
-  height: 30px;
+  height: 1.75rem;
 }
 
 .skeleton-avatar {
-  width: 30%; 
-  height: 30px;
+  width: 30%;
+  height: 1.75rem;
 }
 .skeleton-label {
   width: 30%;
@@ -278,16 +278,16 @@
 
 .skeleton-title-list {
   width: 15%;
-  height: 15px;
+  height: 1rem;
 }
 
 .skeleton-content {
-  width: 80%; 
-  height: 25px;
+  width: 80%;
+  height: 1.5rem;
 }
 
 .skeleton-button {
-  height: 30px;
+  height: 1.75rem;
 }
 
 .padding-0 {
