--- a/src/app/pages/profile-settings/profile-settings.page.html
+++ b/src/app/pages/profile-settings/profile-settings.page.html
@@ -152,7 +152,7 @@
                   formControlName="item"
                   [ordenando]="order"
                   (delete)="DeleteItem(publicoForm, i)"
-                  (change)="ChangeData()"
+                  (changeData)="ChangeData()"
                   >
                 </app-item-perfil>
             </div>
@@ -190,7 +190,7 @@
                 formControlName="item"
                 [ordenando]="order"
                 (delete)="DeleteItem(generalForm, i)"
-                (change)="ChangeData()"
+                (changeData)="ChangeData()"
                 >
                 </app-item-perfil>
               </div>
@@ -227,7 +227,7 @@
               formControlName="item"
               [ordenando]="order"
               (delete)="DeleteItem(personalForm, i)"
-              (change)="ChangeData()"
+              (changeData)="ChangeData()"
               >
               </app-item-perfil>
             </div>
@@ -264,7 +264,7 @@
               formControlName="item"
               [ordenando]="order"
               (delete)="DeleteItem(profesionalForm, i)"
-              (change)="ChangeData()"
+              (changeData)="ChangeData()"
               >
               </app-item-perfil>
             </div>
