--- a/src/app/pages/profile-settings/item-perfil/item-perfil.component.html
+++ b/src/app/pages/profile-settings/item-perfil/item-perfil.component.html
@@ -1,65 +1,61 @@
-<ion-item 
+<ion-item
   class="item-has-placeholder item-perfil"
   [ngClass]="{'item-has-focus': focus}"
   [formGroup]="form"
   >
 
   <!--Icono del item-->
-  <fa-icon 
+  <fa-icon
     *ngIf="itemType"
-    [icon]="itemType? [preIcono, icon] : null"  
-    (click)="MostrarSelector()" 
+    [icon]="itemType? [preIcon, icon] : null"
+    (click)="ShowSelector()"
     class="icono"
     slot="start" ></fa-icon>
- 
+
   <!--Titulo del item-->
-  <ion-label 
-    position="floating" 
+  <ion-label
+    position="floating"
     class="padding-left-10"
     *ngIf="itemType">
     {{(itemType? itemType.description : '') | translate}}
   </ion-label>
 
   <!--Columna con dos inputs, el primero aparece cuando el item solo acepta un valor, el segundo cuando el item acepta dos valores-->
-  <div 
+  <div
   class="contenedor-doble"
   *ngIf="itemType">
     <!--Primer input-->
-    <ion-input 
-    *ngIf="itemType && itemType.index === 0 || itemType.index === 2 || itemType.index === 1 ||  itemType.index === 3 ||  itemType.index === 6 ||  itemType.index === 7"  
-    [placeholder]="MarcaAgua(0) | translate" 
+    <ion-input
+    *ngIf="itemType && itemType.index === 0 || itemType.index === 2 || itemType.index === 1 ||  itemType.index === 3 ||  itemType.index === 6 ||  itemType.index === 7"
+    [placeholder]="Watermark(0) | translate"
     class="input-item"
-    (ionInput)="onInput($event.target.value, 0)"
-    [value]="Valor(0)"
-    [disabled]="isDisabled"
+    (ionInput)="OnInput($event.target.value, 0)"
+    [value]="Value(0)"
     maxlength="150"
     minlength="2"
     [type]="type"
     formControlName="campo1"></ion-input>
-    
+
     <!--Segundo input-->
-    <ion-input 
-    *ngIf="itemType && itemType.index === 2  || itemType.index === 7 " 
+    <ion-input
+    *ngIf="itemType && itemType.index === 2  || itemType.index === 7 "
     class="input-item"
-    [placeholder]="MarcaAgua(1) | translate"
-    [value]="Valor(1)"
-    (ionInput)="onInput($event.target.value, 1)"
-    [disabled]="isDisabled"
+    [placeholder]="Watermark(1) | translate"
+    [value]="Value(1)"
+    (ionInput)="OnInput($event.target.value, 1)"
     [type]="type"
     formControlName="campo2"
     ></ion-input>
   </div>
 
   <!--Selector para item de seleccion-->
-  <ion-select 
-  *ngIf="itemType && itemType.index === 4" 
+  <ion-select
+  *ngIf="itemType && itemType.index === 4"
   class="input-item input-relative"
   interface="popover"
-  ok-text="Aceptar" 
-  cancel-text="Cancelar" 
-  placeholder="Seleccione una opcion"
-  (ionChange)="onInput($event.target.value, 0)"
-  [value]="Valor(0)"
+  [placeholder]="'WINK.PROFILE_SETTINGS.OPTIONS.SELECT_ITEMS' | translate"
+  (ionChange)="OnInput($event.target.value, 0)"
+  [value]="Value(0)"
   formControlName="campo1">
     <ion-select-option
     *ngFor="let option of itemType.options"
@@ -69,27 +65,25 @@
   </ion-select>
 
   <!--Input para fecha-->
-  <ion-datetime 
-  *ngIf="itemType && itemType.index === 5" 
+  <ion-datetime
+  *ngIf="itemType && itemType.index === 5"
   class="input-item input-relative"
-  displayFormat="DD/MM/YYYY" 
-  min="1900-01-01" 
-  [max]="FechaActual() | date:'yyy-MM-dd'"  
-  [value]="Valor(0)? (Valor(0)) : null "
-  cancel-text="Cancelar" 
-  done-text="Aceptar" 
-  (ionChange)="onInput($event.target.value, 0)"
+  displayFormat="DD/MM/YYYY"
+  min="1900-01-01"
+  [max]="CurrentDate() | date:'yyy-MM-dd'"
+  [value]="Value(0)? (Value(0)) : null "
+  (ionChange)="OnInput($event.target.value, 0)"
   formControlName="campo1"
   ></ion-datetime>
 
   <!--Campos para Chips-->
-  <mat-chip-list 
-  #chipList 
-  *ngIf="itemType && itemType.index === 8" 
+  <mat-chip-list
+  #chipList
+  *ngIf="itemType && itemType.index === 8"
   class="chip-item chip-margin">
-    <ion-input 
+    <ion-input
     #chipControl
-    [value]="Valor(0)"
+    [value]="Value(0)"
     hidden
     formControlName="campo1">
     </ion-input>
@@ -97,16 +91,16 @@
       *ngFor="let chip of chipArray"
       >
       {{chip}}
-      <ion-icon 
-        name="close-circle" 
+      <ion-icon
+        name="close-circle"
         (click)="DeleteChip(chip)">
       </ion-icon>
     </ion-chip>
-      
-    <input 
-    
+
+    <input
+    #inputChip
     class="native-input sc-ion-input-md sc-ion-input-ios placeholder"
-    [placeholder]="MarcaAgua(0)  | translate"
+    [placeholder]="Watermark(0)  | translate"
     (focus)="Focus(true)"
     (blur)="Focus(false)"
     maxlength="12"
@@ -115,35 +109,35 @@
     [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
     [matChipInputAddOnBlur]="addOnBlur"
     (matChipInputTokenEnd)="AddChip($event, chipControl)"
-    (input)="ValorChip($event.target.value, chipControl)"
-    (keydown)="keydown($event)"
+    (input)="ValueChip($event.target.value, chipControl)"
+    (keyup)="KeyDown($event, inputChip)"
     >
   </mat-chip-list>
 
   <!--Icono para eliminar-->
-  <ion-icon 
-  *ngIf="!ordenando && !value.basic" 
-  name="close-circle-outline" 
-  slot="end" 
-  (click)="Eliminar()" 
+  <ion-icon
+  *ngIf="!order && !value.basic"
+  name="close-circle-outline"
+  slot="end"
+  (click)="Delete()"
   class="input-relative icon-del"
   ></ion-icon>
-  
+
   <!--Seleccionar tipo de item-->
-  <ion-select 
-  *ngIf="!itemType" 
-  ok-text="Aceptar" 
-  cancel-text="Cancelar" 
+  <ion-select
+  *ngIf="!itemType"
+  ok-text="Aceptar"
+  cancel-text="Cancelar"
   class="select-type input-relative"
-  interface="popover" 
-  [value]="itemType" 
-  [placeholder]="'WINK.PROFILE_SETTINGS.OPTIONS.SELECT_ITEMS' | translate" 
-  (ionChange)="SelecionarTipoItem($event.target.value)"  
+  interface="popover"
+  [value]="itemType"
+  [placeholder]="'WINK.PROFILE_SETTINGS.OPTIONS.SELECT_ITEMS' | translate"
+  (ionChange)="SelectItemType($event.target.value)"
   formControlName="selector"
   >
     <ion-select-option
-    *ngFor="let item of tiposItems" 
-    [disabled]="Unicos(item)" 
+    *ngFor="let item of itemsType"
+    [disabled]="Unique(item)"
     [value]="item">
       {{item.description | translate}}
     </ion-select-option>
