evento con gestos

--- a/src/app/pages/profile-settings/profile-settings.page.html
+++ b/src/app/pages/profile-settings/profile-settings.page.html
@@ -1,4 +1,4 @@
-<ion-menu side="start" contentId="main" menuId="menuSettings" >
+<ion-menu side="start" contentId="main" menuId="menuSettings">
   <ion-header>
     <ion-toolbar translucent>
       <ion-title>
@@ -26,7 +26,7 @@
   </ion-content>
 </ion-menu>
 
-<div class="ion-page" id="main">
+<div class="ion-page" id="main" (swipe)="Swipe($event)">
 
   <ion-header translucent>
     <ion-toolbar>
