--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,4 +1,4 @@
-<div class="ion-page" id="main">
+<div class="ion-page" id="main" (swipe)="Swipe($event)">
   <ion-header >
     <ion-toolbar>
       <ion-title>
