--- a/src/app/pages/profile-settings/profile-settings.page.html
+++ b/src/app/pages/profile-settings/profile-settings.page.html
@@ -1,4 +1,4 @@
-<ion-menu side="start" contentId="main" menuId="menuSettings">
+<ion-menu side="start" contentId="main" menuId="menuSettings" [swipeGesture]="openMenu">
   <ion-header>
     <ion-toolbar translucent>
       <ion-title>
