--- a/src/global.scss
+++ b/src/global.scss
@@ -240,6 +240,15 @@
   align-items: center;
 }
 
+.ripple-toolbar-lg {
+  border-radius: 50%;
+  height: 2.5rem;
+  width: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .ripple-toolbar-mis{
   margin-inline-start: 0.2rem;
 }
