--- a/src/app/pages/winks/item-wink/item-wink.component.html
+++ b/src/app/pages/winks/item-wink/item-wink.component.html
@@ -4,14 +4,14 @@
   </ion-avatar>
   <ion-label class="label-item">
     <div>
-      <ion-title class="title-wink" (click)="GoPrivateProfile()" [ngClass]="{'title-newWink': wink.user.newWink}">
+      <div class="title-wink" (click)="GoPrivateProfile()" [ngClass]="{'title-newWink': wink.user.newWink}">
         {{wink && wink.user ? wink.user.firstName + ' ' + wink.user.lastName : 'John Doe'}}
         <ion-badge *ngIf="wink.user.newWink" class="item-win-badge">*</ion-badge>
-      </ion-title>
+      </div>
       <div *ngIf="wink" class="date-wink">
         <ion-icon name="time" color="medium"></ion-icon>
         <ion-note class="note-wink"  color="medium">{{ Time(wink.createdAt)  }}</ion-note>
-      </div>  
+      </div>
     </div>
     <div *ngIf="!(load | async)"  class="date-wink content-center" >
       <ion-button class="button-50 input-relative" (click)="Accept()">
@@ -28,7 +28,7 @@
 </ion-item>
 
 <ion-item-sliding *ngIf="wink && wink.approved && wink.user">
-  
+
   <ion-item-options *ngIf="!(load | async)" side="start">
     <ion-item-option color="danger" expandable="true" (click)="Ignore()">
       {{'WINK.BUTTONS.DELETE' | translate}}
@@ -41,18 +41,16 @@
       <img [srcPath]="Avatar()" class="img-avatar" (ionError)="ErrorImagen()" >
     </ion-avatar>
     <ion-label class="label-item">
-      <div>
-        <ion-title class="title-wink" (click)="GoPrivateProfile()" >
-          {{wink && wink.user ? wink.user.firstName + ' ' + wink.user.lastName : 'John Doe'}}
-        </ion-title>
-        <div *ngIf="wink" class="date-wink">
-          <ion-icon name="time" color="medium"></ion-icon>
-          <ion-note class="note-wink"  color="medium">{{ Time(wink.updatedAt) }}</ion-note>
-        </div>  
+      <div class="title-wink" (click)="GoPrivateProfile()" >
+        {{wink && wink.user ? wink.user.firstName + ' ' + wink.user.lastName : 'John Doe'}}
+      </div>
+      <div *ngIf="wink" class="date-wink">
+        <ion-icon name="time" color="medium"></ion-icon>
+        <ion-note class="note-wink"  color="medium">{{ Time(wink.updatedAt) }}</ion-note>
       </div>
     </ion-label>
   </ion-item>
-  
+
   <ion-item-options *ngIf="!(load | async)" side="end">
     <ion-item-option color="danger" expandable="true" (click)="Ignore()">
       {{'WINK.BUTTONS.DELETE' | translate}}
