--- a/src/global.scss
+++ b/src/global.scss
@@ -175,8 +175,10 @@
 }
 
 .title-name {
-  font-size: x-large;
+  font-size: 1.5rem;
   text-align: center;
+  font-weight: bold;
+  font-family: var(--ion-font-family,inherit);
 }
 
 .avatar-profile {
