--- a/vlibs/virtwoo-auth/components/virtwoo-auth-form/virtwoo-auth-form.component.html
+++ b/vlibs/virtwoo-auth/components/virtwoo-auth-form/virtwoo-auth-form.component.html
@@ -119,6 +119,7 @@
     <img
       *ngIf="submitIconUrl"
       [src]="submitIconUrl"
+      class="icon-submit"
     >
     <ng-container></ng-container>
 
