--- a/src/app/pages/tabs/tabs.component.html
+++ b/src/app/pages/tabs/tabs.component.html
@@ -1,4 +1,4 @@
-<ion-tabs [ngClass]="{'ocultar': ocultar}" root="home">
+<ion-tabs [ngClass]="{'ocultar': ocultar}">
   <ion-tab-bar slot="bottom" >
     <ion-tab-button [tab]="profiles" [disabled]="tour">
       <ion-icon name="person"></ion-icon>
