--- a/src/app/pages/profile-settings/profile-settings.page.html
+++ b/src/app/pages/profile-settings/profile-settings.page.html
@@ -26,7 +26,7 @@
   </ion-content>
 </ion-menu>
 
-<div class="ion-page" id="main" (swipe)="Swipe($event)" main>
+<div class="ion-page" id="main" (swipe)="Swipe($event)">
 
   <ion-header translucent>
     <ion-toolbar>
