--- a/src/global.scss
+++ b/src/global.scss
@@ -327,3 +327,11 @@
 .content-center {
   justify-content: center;
 }
+
+.medium {
+  color: var(--ion-color-medium);
+}
+.primary {
+  color: var(--ion-color-primary);
+}
+
