--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,8 +1,8 @@
 .activo {
-  opacity: 1;
+  --background: var(--ion-color-primary);
 }
 .inactivo {
-  opacity: 0.5;
+  --background: var(--ion-color-secondary);
 }
 
 .activo2 {
