--- a/src/app/pages/profile-settings/item-perfil/item-perfil.component.scss
+++ b/src/app/pages/profile-settings/item-perfil/item-perfil.component.scss
@@ -13,15 +13,66 @@
   display: flex;
   flex-direction: column;
   width:  100%;
+  height: 100%;
 }
 
 .select-type {
+  font-size: 1.1rem;
   min-width: 100% !important;
-  padding-left: 1rem;
-  min-height: 4rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  min-height: 3.125rem;
+  --placeholder-color: var(--ion-color-light);
+  --placeholder-opacity: 1;
 }
 
 .icon-del {
-  margin-inline-start: 0.1rem !important;
-  align-self:center
+  color: var(--ion-color-medium);
+  font-size: 1.5rem;
+  align-self:center;
+  padding: 0.4rem;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: 5fr 0.5fr;
+  grid-gap: 0.1rem;
+  background: var(--color-pego);
+  border-radius: 0.625rem;
+  min-height: 3.125rem;
+}
+.wrapper-sub {
+  display: grid;
+  grid-template-columns: 0.7fr 4fr;
+  grid-gap: 0.1rem;
+  min-height: 3.125rem;
+}
+.icon-column {
+  grid-column: 1;
+  grid-row: 1;
+}
+.delete-column {
+  grid-column: 2;
+  grid-row: 1;
+}
+.select-column {
+  grid-column: 1;
+  grid-row: 1;
+}
+.all-column {
+  grid-column: 1 / 3;
+  grid-row: 1;
+}
+.order {
+  border: 0.9px solid rgb(192, 189, 189);
+}
+
+.input-chips {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 1.1rem;
+  min-height: 3.125rem;
+  --placeholder-color: var(--ion-color-light);
+  --placeholder-opacity: 1;
+  margin: 0px !important;
 }
