--- a/src/app/pages/profile-settings/profile-settings.page.html
+++ b/src/app/pages/profile-settings/profile-settings.page.html
@@ -134,6 +134,7 @@
             >
             <mat-expansion-panel-header>
               <mat-panel-title>
+                <ion-icon src="/assets/icon/public.svg" class="icon-section"></ion-icon>
                 {{'WINK.SECTIONS.PUBLIC' | translate}}
               </mat-panel-title>
             </mat-expansion-panel-header>
@@ -148,7 +149,7 @@
               [cdkDragDisabled]="order"
               (cdkDragStarted)="Drag()"
               (cdkDragEnded)="Drop()"
-              [ngClass]="{'order': !order}">
+              >
                 <app-item-perfil
                   [form]="itemPublico"
                   formControlName="item"
@@ -174,6 +175,7 @@
             >
             <mat-expansion-panel-header>
               <mat-panel-title>
+                <ion-icon src="/assets/icon/private.svg" class="icon-section"></ion-icon>
                 {{'WINK.SECTIONS.GENERAL' | translate}}
               </mat-panel-title>
             </mat-expansion-panel-header>
@@ -185,7 +187,6 @@
               [cdkDragDisabled]="order"
               (cdkDragStarted)="Drag()"
               (cdkDragEnded)="Drop()"
-              [ngClass]="{'order': !order}"
               >
                 <app-item-perfil
                 [form]="itemGeneral"
@@ -211,6 +212,7 @@
           >
             <mat-expansion-panel-header>
               <mat-panel-title>
+                <ion-icon src="/assets/icon/private.svg" class="icon-section"></ion-icon>
                 {{'WINK.SECTIONS.PERSONAL' | translate}}
               </mat-panel-title>
             </mat-expansion-panel-header>
@@ -222,7 +224,6 @@
             [cdkDragDisabled]="order"
             (cdkDragStarted)="Drag()"
             (cdkDragEnded)="Drop()"
-            [ngClass]="{'order': !order}"
             >
               <app-item-perfil
               [form]="itemPersonal"
@@ -248,6 +249,7 @@
           >
             <mat-expansion-panel-header>
               <mat-panel-title>
+                <ion-icon src="/assets/icon/private.svg" class="icon-section"></ion-icon>
                 {{'WINK.SECTIONS.PROFESSIONAL' | translate}}
               </mat-panel-title>
             </mat-expansion-panel-header>
@@ -259,7 +261,6 @@
             [cdkDragDisabled]="order"
             (cdkDragStarted)="Drag()"
             (cdkDragEnded)="Drop()"
-            [ngClass]="{'order': !order}"
             >
               <app-item-perfil
               [form]="itemProfesional"
