--- a/src/app/pages/public-profile/public-profile.page.scss
+++ b/src/app/pages/public-profile/public-profile.page.scss
@@ -30,7 +30,7 @@
 
 .public-img {
   width: 100%;
-  height: 95.5%;
+  height: 94.5%;
 }
 
 .text-small {
@@ -47,13 +47,13 @@
 
 .button-wink {
   position: absolute;
-  top: 95.5%;
+  top: 94.5%;
   left: 0%;
   width: 100%;
-  border-bottom: 0.01rem solid var(--ion-color-medium);
+  border-bottom: 1px solid rgba(0,0,0,0.3);
 }
 .buttons-wink {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   font-weight: inherit;
 }
 .top {
@@ -75,7 +75,7 @@
 .gradient {
   -webkit-mask-image: -webkit-gradient(linear, left bottom, left top, from(rgba(0,0,0,0.8)), to(rgba(0, 0, 0, 0)));
   background: black;
-  height: 80.5%;
+  height: 79.5%;
   width: 100%;
   position: absolute;
   top: 15%;
