--- a/src/global.scss
+++ b/src/global.scss
@@ -30,10 +30,10 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald:400,700');
 
 .icono {
-  margin-inline-end: 0px !important;
-  align-self:flex-start;
-  min-width: 2rem;
-  margin-top: 0.8rem;
+  // margin-inline-end: 0px !important;
+  // align-self:flex-start;
+  // min-width: 2rem;
+  // margin-top: 0.8rem;
   color: rgba(var(--ion-text-color-rgb,0,0,0),0.54);
   font-size: 1.6rem;
     --highlight-color-focused: #3880ff;
@@ -77,13 +77,22 @@
 }
 
 .chip-item {
-  margin-top: 0.3rem;
   flex-wrap: nowrap;
   width: 100%;
+  margin-top: 0.1rem;
+  margin-bottom: 0.1rem;
 }
 
 .input-item {
-  margin-left: 2%;
+  margin-left: 0.2rem;
+  width: 98%;
+  font-size: 1.1rem;
+  --placeholder-color: var(--ion-color-light);
+  --placeholder-opacity: 1;
+}
+.date-item {
+  font-size: 1.1rem;
+  padding: 0.7rem;
   width: 98%;
 }
 
@@ -177,7 +186,7 @@
 .title-name {
   font-size: 1.5rem;
   text-align: center;
-  font-weight: bold;
+  font-weight: inherit;
   font-family: var(--ion-font-family,inherit);
 }
 
@@ -206,9 +215,6 @@
   object-fit: cover;
 }
 
-.chip-margin {
-  margin-bottom: 0.3rem;
-}
 
 .vacio {
   align-self: center;
@@ -251,6 +257,13 @@
   align-items: center;
 }
 
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
 .ripple-toolbar-mis{
   margin-inline-start: 0.2rem;
 }
@@ -264,7 +277,7 @@
 }
 
 .newWink {
-  border: 0.1rem #3880ff solid;
+  border: 0.1rem var(--ion-color-primary) solid;
 }
 
 .card-list {
@@ -329,9 +342,17 @@
 }
 
 .medium {
-  color: var(--ion-color-medium);
+  color: var(--ion-color-medium) !important;
 }
 .primary {
-  color: var(--ion-color-primary);
+  color: var(--ion-color-primary) !important;
 }
+
+.pego {
+  color: var(--color-pego) !important;
+}
+.contrast-pego {
+  color: var(--color-cpego) !important;
+}
+
 
