--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,20 +4,20 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
+  --ion-color-primary: #FEAC00;//#3880ff;
+  --ion-color-primary-rgb: 254, 172, 0;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-shade: #FEAC0090;
+  --ion-color-primary-tint: #FEAC00;//#4c8dff;
 
   /** secondary **/
-  --ion-color-secondary: #0cd1e8;
+  --ion-color-secondary: #B57B00;
   --ion-color-secondary-rgb: 12, 209, 232;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #0bb8cc;
-  --ion-color-secondary-tint: #24d6ea;
+  --ion-color-secondary-shade: #B57B0090;
+  --ion-color-secondary-tint: #B57B00;
 
   /** tertiary **/
   --ion-color-tertiary: #7044ff;
@@ -52,28 +52,28 @@
   --ion-color-danger-tint: #f25454;
 
   /** dark **/
-  --ion-color-dark: #222428;
+  --ion-color-dark: #0B0700;
   --ion-color-dark-rgb: 34, 34, 34;
   --ion-color-dark-contrast: #ffffff;
   --ion-color-dark-contrast-rgb: 255, 255, 255;
   --ion-color-dark-shade: #1e2023;
-  --ion-color-dark-tint: #383a3e;
+  --ion-color-dark-tint: #0B0700;
 
   /** medium **/
-  --ion-color-medium: #989aa2;
+  --ion-color-medium: #0B070050;
   --ion-color-medium-rgb: 152, 154, 162;
   --ion-color-medium-contrast: #ffffff;
   --ion-color-medium-contrast-rgb: 255, 255, 255;
   --ion-color-medium-shade: #86888f;
-  --ion-color-medium-tint: #a2a4ab;
+  --ion-color-medium-tint: #0B070050;
 
   /** light **/
-  --ion-color-light: #f4f5f8;
+  --ion-color-light: #0B070030;
   --ion-color-light-rgb: 244, 244, 244;
   --ion-color-light-contrast: #000000;
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
-  --ion-color-light-tint: #f5f6f9;
+  --ion-color-light-tint: #0B070030;
 
 
   /* GUIDE COLOR */
@@ -82,7 +82,7 @@
   --color-secondary: #3acce1;
   --color-background: #2a2e43;
   --color-dark: #454F63;
-  --color-danger: #FF4F9A;
+  --color-danger: #F35532;
   --color-1: #5773FF;
   --color-2: #3497FD;
   --color-3: #C840E9;
@@ -91,6 +91,8 @@
   --color-7: #78849E;
   --color-placeholder: #b9bfcc;
   --color-overlay: rgba(0, 0, 0, .2);
+  --color-pego: #F6F2E7;
+  --color-cpego: #0B070060;
 
   /* STYLES */
   --app-border-radius: .6rem;
